// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridItem should add inline styles with child 1`] = `
<div
  style="grid-columns:1/3;grid-rows:2/2"
/>
`;

exports[`GridItem should add merge existing styles with child 1`] = `
<div
  style="color:blue;grid-columns:1/3;grid-rows:2/2"
/>
`;

exports[`GridItem should assign fake subgrid styles when subgrid is selected 1`] = `
<div
  style="display:grid;grid-template-area:inherit;grid-template-column:inherit;grid-template-row:inherit"
/>
`;
